# AntVM

./: .gitignore  Makefile  Makefile.am  Makefile.in  README.md  antlog.txt  config.h  config.status  configure  configure.ac  configure.scan  cscope.in.out  cscope.out  cscope.po.out  readme  tags
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
material/: kb  linuxstartbindisem  some commands
src/: .main.c.swp  Makefile  Makefile.am  Makefile.in  antvm  main.c
src/.deps/: main.Po
src/AntWin/: AntWin.sln
src/AntWin/AntWin/: AntWin.c  AntWin.vcxproj  getopt.h
src/AntWin/AntWin/i386/: Makefile.am  Makefile.in  i386_arch.c  i386_arch.h  i386_emu.c  i386_emu.h  i386_port_action_map.c  i386_port_action_map.h  i386_utility.c  i386_utility.h  instruction.c  instruction.h  interupt.c  interupt.h
src/AntWin/AntWin/i386/devices/: Makefile.am  Makefile.in  serial.c  serial.h
src/common/: Makefile.am  Makefile.in  tool.c  tool.h
src/i386/: .i386_arch.c.swp  .instruction.c.swo  Makefile  Makefile.am  Makefile.in  i386.c  i386.h  i386_arch.c  i386_arch.h  i386_emu.c  i386_emu.h  i386_library.c  i386_library.h  i386_port_action_map.c  i386_port_action_map.h  i386_utility.c  i386_utility.h  instruction.c  instruction.h  interupt.c  interupt.h
src/i386/.deps/: i386_arch.Po  i386_emu.Po  i386_utility.Po  instruction.Po  interupt.Po
src/i386/devices/: serial.c  serial.h
test/: test.sh
webserver/: jslinux.7z
webserver/jslinux/: miniweb-server_exe
webserver/jslinux/webroot/: cpux86-ta.js  index.html  jsdump  jslinux.js  term.js
